parslers-benchmark/src/tests/invalid/syntaxErr/variables/bigIntAssignment.wacc
# int assignment overlow

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  int x = 2200000000 
end
